data/derived/comb/progs/unify/prog8050.ml.out
Characters 13-58:
  let _ = eval (Neg(Half(Sine(Average(VarX,VarY))),0.3,0.3));;
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
